menu autorizaciones tutores

--- a/src/templates/dashboard/base_dashboard.html
+++ b/src/templates/dashboard/base_dashboard.html
@@ -827,7 +827,7 @@
                             <option value="">Seleccione...</option><option value="PI">Primaria Incompleto</option><option value="PR">Primaria Completo</option><option value="SI">Secundaria Incompleto</option><option value="SE">Secundaria Completo</option><option value="UI">Universidad Incompleto</option><option value="UN">Universidad Completo</option><option value="OT">Otro</option>
                         </select>
                     </div>
-                    <div class="form-group"><label>Institución Actual</label><input type="text" name="institucion_actual" placeholder="Nombre de la institución" class="form-input"></div>
+                    <div class="form-group"><label>Institución</label><input type="text" name="institucion_actual" placeholder="Nombre de la institución" class="form-input"></div>
                     <div class="form-group"><label>Contraseña *</label><input type="password" name="password" required placeholder="Mínimo 6 caracteres" class="form-input"></div>
                     <div class="form-group"><label>Confirmar Contraseña *</label><input type="password" name="password_confirm" required placeholder="Repite la contraseña" class="form-input"></div>
                 </div>
