--- a/src/templates/landing_cursos.html
+++ b/src/templates/landing_cursos.html
@@ -1764,7 +1764,7 @@
 
                 <!-- Institución Actual -->
                 <div class="form-group">
-                    <label>Institución Actual</label>
+                    <label>Institución</label>
                     <input type="text" name="institucion_actual" placeholder="Nombre de la institución" class="form-input">
                 </div>
 
