--- a/src/templates/usuario/registro.html
+++ b/src/templates/usuario/registro.html
@@ -368,7 +368,7 @@
                             </select>
                         </div>
                         <div class="form-group">
-                            <label for="institucion_actual">Institución Actual</label>
+                            <label for="institucion_actual">Institución</label>
                             <input type="text" id="institucion_actual" name="institucion_actual" placeholder="Nombre de la institución">
                         </div>
                     </div>
