--- a/src/templates/landing.html
+++ b/src/templates/landing.html
@@ -972,7 +972,7 @@
                             <option value="OT">Otro</option>
                         </select>
                     </div>
-                    <div class="form-group"><label>Institución Actual</label><input type="text"
+                    <div class="form-group"><label>Institución</label><input type="text"
                             name="institucion_actual" placeholder="Nombre de la institución" class="form-input"></div>
                     <div class="form-group"><label>Contraseña *</label><input type="password" name="password" required
                             placeholder="Mínimo 6 caracteres" class="form-input"></div>
