--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -52,6 +52,16 @@
     a[href*="admin"]:hover {
         transform: translateY(-5px);
     }
+
+    @media (max-width: 1024px) {
+        .container > div {
+            padding: 2rem !important;
+        }
+
+        .container > div h1 {
+            font-size: 2rem !important;
+        }
+    }
 </style>
 {% endblock %}
 
